// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for InstallTabs component renders correctly 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel:r0:0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r0:0"
          role="tab"
          tabindex="0"
        >
          Windows (Chocolatey)
        </li>
        <li
          aria-controls="panel:r0:1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r0:1"
          role="tab"
        >
          macOS (nvm)
        </li>
        <li
          aria-controls="panel:r0:2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r0:2"
          role="tab"
        >
          Linux (nvm)
        </li>
      </ul>
      <div
        aria-labelledby="tab:r0:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r0:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                choco 
              </span>
              install nvs
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              add lts
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              use lts
            </code>
          </pre>
          <br />
          <br />
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvs"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r0:1"
        class="react-tabs__tab-panel"
        id="panel:r0:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r0:2"
        class="react-tabs__tab-panel"
        id="panel:r0:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component renders correctly for Linux 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel:r2:0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r2:0"
          role="tab"
          tabindex="0"
        >
          Linux (nvm)
        </li>
        <li
          aria-controls="panel:r2:1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r2:1"
          role="tab"
        >
          macOS (nvm)
        </li>
        <li
          aria-controls="panel:r2:2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r2:2"
          role="tab"
        >
          Windows (Chocolatey)
        </li>
      </ul>
      <div
        aria-labelledby="tab:r2:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r2:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                curl -o- 
              </span>
              https://raw.githubusercontent.com/nvm-sh/nvm/mockVersionString/install.sh
              <span
                class="install__text__command"
              >
                 | bash
              </span>
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvm
              </span>
               install --lts
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvm"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r2:1"
        class="react-tabs__tab-panel"
        id="panel:r2:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r2:2"
        class="react-tabs__tab-panel"
        id="panel:r2:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component renders correctly for Unix 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel:r3:0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r3:0"
          role="tab"
          tabindex="0"
        >
          Linux (nvm)
        </li>
        <li
          aria-controls="panel:r3:1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r3:1"
          role="tab"
        >
          macOS (nvm)
        </li>
        <li
          aria-controls="panel:r3:2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r3:2"
          role="tab"
        >
          Windows (Chocolatey)
        </li>
      </ul>
      <div
        aria-labelledby="tab:r3:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r3:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                curl -o- 
              </span>
              https://raw.githubusercontent.com/nvm-sh/nvm/mockVersionString/install.sh
              <span
                class="install__text__command"
              >
                 | bash
              </span>
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvm
              </span>
               install --lts
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvm"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r3:1"
        class="react-tabs__tab-panel"
        id="panel:r3:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r3:2"
        class="react-tabs__tab-panel"
        id="panel:r3:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component renders correctly for macOS 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          zsh
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel:r1:0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r1:0"
          role="tab"
          tabindex="0"
        >
          macOS (nvm)
        </li>
        <li
          aria-controls="panel:r1:1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r1:1"
          role="tab"
        >
          Windows (Chocolatey)
        </li>
        <li
          aria-controls="panel:r1:2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r1:2"
          role="tab"
        >
          Linux (nvm)
        </li>
      </ul>
      <div
        aria-labelledby="tab:r1:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r1:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                curl -o- 
              </span>
              https://raw.githubusercontent.com/nvm-sh/nvm/mockVersionString/install.sh
              <span
                class="install__text__command"
              >
                 | bash 
              </span>
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvm 
              </span>
              install --lts
            </code>
          </pre>
          <br />
          <br />
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvm"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r1:1"
        class="react-tabs__tab-panel"
        id="panel:r1:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r1:2"
        class="react-tabs__tab-panel"
        id="panel:r1:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component renders correctly for mobile 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      />
      <div
        aria-labelledby="tab:r5:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r5:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                choco 
              </span>
              install nvs
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              add lts
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              use lts
            </code>
          </pre>
          <br />
          <br />
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvs"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r5:1"
        class="react-tabs__tab-panel"
        id="panel:r5:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r5:2"
        class="react-tabs__tab-panel"
        id="panel:r5:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component renders correctly for other 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
          <div
            class="install__header-grey-circle"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel:r4:0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r4:0"
          role="tab"
          tabindex="0"
        >
          Windows (Chocolatey)
        </li>
        <li
          aria-controls="panel:r4:1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r4:1"
          role="tab"
        >
          macOS (nvm)
        </li>
        <li
          aria-controls="panel:r4:2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab:r4:2"
          role="tab"
        >
          Linux (nvm)
        </li>
      </ul>
      <div
        aria-labelledby="tab:r4:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r4:0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                choco 
              </span>
              install nvs
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              add lts
            </code>
          </pre>
          <pre
            class="shell-box"
          >
            <div
              class="shell-box-top"
            >
              <span>
                SHELL
              </span>
              <button
                type="button"
              >
                copy
              </button>
            </div>
            <code>
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install__text__command"
              >
                nvs 
              </span>
              use lts
            </code>
          </pre>
          <br />
          <br />
          <a
            class="install__docs-button"
            href="/download/package-manager/#nvs"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab:r4:1"
        class="react-tabs__tab-panel"
        id="panel:r4:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r4:2"
        class="react-tabs__tab-panel"
        id="panel:r4:2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
